# guenther

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  audio_lines.toml  docker-compose.yml  justfile  voice_lines.toml
guenther-core/: Cargo.toml
guenther-core/src/: config.rs  error.rs  f1.rs  lib.rs  utils.rs
guenther-core/src/download/: media_files.rs  mod.rs  runner.rs
guenther-core/src/download/platform/: mod.rs  tiktok.rs  twitter.rs  youtube.rs
guenther-core/src/download/platform/twitter/: metadata.rs  mod.rs  syndication.rs
guenther-core/tests/: config_env.rs
src/: commands.rs  comments.rs  download.rs  error.rs  handler.rs  main.rs  router.rs  utils.rs
src/download/: media_files.rs  mod.rs  runner.rs
src/download/platform/: instagram.rs
telegram/: Cargo.toml
telegram/src/: commands.rs  handler.rs  inline.rs  main.rs  voice_lines.rs
telegram/src/voice_lines/: capture.rs  mod.rs
tests/: config_env.rs
