[workspace]
members = ["guenther-core", "telegram"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
edition = "2024"
license = "MIT"

[workspace.dependencies]
guenther-core = { path = "guenther-core", default-features = false }

async-trait = "0.1"
capitalize = "0.3.4"
color-eyre = "0.6"
dotenv = "0.15"
futures = "0.3"
infer = "0.19"
rand = "0.10"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
] }
serde_json = "1"
teloxide = { version = "0.17", default-features = false, features = [
  "ctrlc_handler",
  "macros",
  "rustls",
] }
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1", features = ["process", "fs"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
url = "2.5"

# dev
claims = "0.8"
temp-env = "0.3"
rstest = "0.26"

[workspace.lints.clippy]
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"
