[package]
name = "guenther-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["instagram", "tiktok", "twitter", "youtube"]
instagram = []
tiktok = []
twitter = []
youtube = []

[dependencies]
async-trait.workspace = true
capitalize.workspace = true
color-eyre.workspace = true
dotenv.workspace = true
futures.workspace = true
infer.workspace = true
rand.workspace = true
regex.workspace = true
teloxide.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
claims.workspace = true
temp-env.workspace = true
rstest.workspace = true

[lints]
workspace = true
