[package]
name = "telegram"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["instagram", "tiktok", "twitter", "youtube"]
instagram = ["guenther-core/instagram"]
tiktok = ["guenther-core/tiktok"]
twitter = ["guenther-core/twitter"]
youtube = ["guenther-core/youtube"]

[dependencies]
color-eyre.workspace = true
dotenv.workspace = true
guenther-core.workspace = true
regex.workspace = true
teloxide.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true

[lints]
workspace = true
