[package]
name = "telegram"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["instagram", "tiktok", "twitter", "youtube"]
instagram = ["guenther-core/instagram"]
tiktok = ["guenther-core/tiktok"]
twitter = ["guenther-core/twitter"]
youtube = ["guenther-core/youtube"]
voice-line-capture = []

[dependencies]
color-eyre.workspace = true
dotenv.workspace = true
guenther-core.workspace = true
regex.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
teloxide.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml.workspace = true
tracing.workspace = true

[lints]
workspace = true
